# ockham

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements.txt
backend/src/ai/: runtime_config.py  text_utils.py
backend/src/ai/providers/: factory.py
backend/src/api/: dependencies.py
backend/src/config/: __init__.py  logging.py  settings.py
backend/src/db/: database.py  models.py
backend/src/llm/: client.py  llm_ranking.py  model_factory.py  parser.py  payloads.py  prompts.py  provider.py  runtime_config.py  schemas.py
backend/src/ml/: contracts.py
backend/src/preprocessing/: column_context.py  column_profiler.py  core.py  dataset_profiler.py  dataset_retriever.py  operation_registry.py  operation_specs.py  pipeline.py  profile_service.py  prompts.py  schemas.py  state.py
backend/src/services/: diagnostics_backfill.py  execution.py  experiments.py  model_workers.py  persistence.py  runtime.py
backend/src/utils/: core.py
backend/tests/unit/: test_agent_specific_output_contracts.py  test_api_headers.py  test_architecture_boundaries.py  test_casting_noop_guard.py  test_column_context.py  test_missing_value_row_drop.py  test_ollama_structured_output.py  test_ollama_thinking_config.py  test_plan_explainer_removed.py  test_plan_judge_guardrails.py  test_preprocessing_operation_registry.py  test_profile_view_builder_alignment.py  test_response_parser.py  test_score_ranker.py  test_simplified_agent_output_contracts.py
(+171 files in other folders)
